[metadata]
name = Flask-MathDown
version = 0.4.1.dev0
author = Nikolai Beck
author_email = beck.nikolai@gmail.com
description = Implementation of StackOverflow's "PageDown" markdown editor including MathJax for Flask-WTF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beckni/flask-mathdown
project_urls =
    Bug Tracker = https://github.com/beckni/flask-mathdown/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    Flask
    WTForms

[options.packages.find]
where = src
